Complete runtime-state removal: game layer owns all dynamic evaluation
Sweeps every MC module and mod for the core demolition (68 files):

- Predicates (entity/block/weather/damage/random) implement the game-side
  EvaluableCondition instead of evaluating inside core
- All 16 property engines finalize without context (apply(baked) over
  OptimizedBakedResult.all()); the property managers and projectile/throw
  call sites filter compiled properties via RuntimeConditions with the
  context they already build from live game state
- ItemPropertyApi loses its context parameters; the tooltip chain drops
  DynamicContext threading entirely
- Core dynamic-evaluation test coverage ported to RuntimeConditionsTest
  in mc/common (AND/OR/NOT, Condition.any() wrapper semantics, fail-closed
  unknown types, property filtering)

The component tree is now a pure compile-time structure: modules/core
carries dynamic conditions as data only, and runtime state cannot enter
a component tree by construction. 1134 core tests plus mc/common and
predicate suites green; all modules and mods compile.

https://claude.ai/code/session_01C27FFEGj916HE2CVFR1agw